capstone-api/k8s/08-backend-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-b
  namespace: microservices-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-b
  template:
    metadata:
      labels:
        app: backend-b
    spec:
      containers:
      - name: backend-b
        image: acrcapstoneari123.azurecr.io/backend-a:v1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
