capstone-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: microservices-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/a(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-a-service
            port:
              number: 8080
      - path: /api/b(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-b-service
            port:
              number: 8080
